package com.finsight.portfoliomanager.infrastructure.grpc;

import org.springframework.stereotype.Service;

import com.finsight.proto.FinancialDataServiceGrpc;
import com.finsight.proto.StockRequest;
import com.finsight.proto.StockPriceResponse;

import net.devh.boot.grpc.client.inject.GrpcClient;

@Service
public class GrpcFinancialDataClient {
    @GrpcClient("local-grpc-server")
    private FinancialDataServiceGrpc.FinancialDataServiceBlockingStub financialDataClient;

    public Double getStockPrice(String symbol) {
        try {
            StockRequest request = StockRequest.newBuilder()
                    .setSymbol(symbol)
                    .build();

            StockPriceResponse response = financialDataClient.getStockPrice(request);

            System.out.println("✅ gRPC Response: " + response.getSymbol() + " = " + response.getPrice());
            return response.getPrice();
        } catch (Exception e) {
            System.err.println("❌ gRPC Error: " + e.getMessage());
            return 0.0;
        }
    }
}
